# cmake-incbin

./: CMakeLists.txt
test/: tool.c
